Configure MongoDB Atlas connection

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URL=mongodb://localhost:27017/TestCrud
+MONGO_URL=mongodb+srv://onesimedafonseca_db_user:sJcUMllt5w5Cz7d8@cluster0.2vbwxeu.mongodb.net/TestCrud?retryWrites=true&w=majority&appName=Cluster0
